--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="paper-header center-box-shadow width">
       <img src="images/logo.png">
     </div>
-    <div class="center-box-shadow width bgcolor">
+    <div id="cast-content" class="center-box-shadow width bgcolor">
       <cast-manager app-id="4F8B3483"
                       cast-available="{{castAvailable}}"
                       connection-status="{{connectionStatus}}"
