adding more to the initial template

--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
 <body class="fullbleed layout vertical" id="body">
 
 <template id="t" is="dom-bind">
-</template>
+  <paper-header-panel class="flex" mode="scroll">
+    <div class="paper-header center-box-shadow width">
+      <img src="images/logo.png">
+    </div>
+    <div id="cast-content" class="center-box-shadow width bgcolor">
+    </div>
+  </paper-header-panel>
+</template> 
 
 </body>
 <script>
