adding cast controller bar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="import" href="bower_components/cast-manager-polymer/cast-manager.html">
   <link rel="import" href="bower_components/cast-video-polymer/cast-video.html">
   <link rel="import" href="bower_components/cast-dialog-polymer/cast-dialog.html">
+  <link rel="import" href="bower_components/cast-controller-bar-polymer/cast-controller-bar.html">
 
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" media="only screen and (max-width: 1109px)"
@@ -123,6 +124,16 @@
         <cast-dialog cast-available="[[castAvailable]]"
                      countdown-to-next-media-item="[[countdownToNextMediaItem]]"
                      next-queue-media-item="[[nextQueueMediaItem]]"></cast-dialog>
+        <cast-controller-bar volume="[[volume]]"
+                             local-media="[[localMedia]]"
+                             cast-available="[[castAvailable]]"
+                             connection-status="[[connectionStatus]]"
+                             has-cast-media="[[hasCastMedia]]"
+                             cast-device-name="[[castDeviceName]]"
+                             current-time="[[currentTime]]"
+                             queue="[[ queue ]]"
+                             video-element="video"
+                             scroll-element="body"></cast-controller-bar>
         <div id="video-content" class="video-content">
           <div class="video-width video-height shadow">
           <cast-video id="video"
@@ -149,6 +160,7 @@
                         local-media="[[localMedia]]">
         </video-carousel>
       </cast-manager>
+      <div id="footer" class="width"></div>
     </div>
   </paper-header-panel>
 </template> 
