--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     </div>
     <div id="cast-content" class="center-box-shadow width bgcolor">
     </div>
+    <div id="footer" class="width"></div>
   </paper-header-panel>
 </template> 
 
