--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                       next-queue-media-item="{{nextQueueMediaItem}}"
                       countdown-to-next-media-item="{{countdownToNextMediaItem}}">
       </cast-manager>
+      <div id="footer" class="width"></div>
     </div>
   </paper-header-panel>
 </template> 
