--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                         local-media="[[localMedia]]">
         </video-carousel>
       </cast-manager>
+      <div id="footer" class="width"></div>
     </div>
   </paper-header-panel>
 </template> 
