--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                         local-media="[[localMedia]]">
         </video-carousel>
       </cast-manager>
+      <div id="footer" class="width"></div>
     </div>
   </paper-header-panel>
 </template> 
