cleaning up index

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       // Response handlers.
       xhr.onload = function () {
         var content = JSON.parse(xhr.responseText);
-        mediaList = processMediaList(content);
+        processMediaList(content);
       };
 
       xhr.onerror = function () {
@@ -69,22 +69,19 @@
     }
 
     function processMediaList(content) {
-      var mediaList = {};
       mediaArray = [];
       var contentArray = content.categories[0].videos;
       for (var i = 0; i < contentArray.length; i++) {
         var title = contentArray[i].title.replace(/\s+/g, '-').toLowerCase();
-        mediaList[title] = new cast.MediaItem({
+        mediaArray.push(new cast.MediaItem({
           'title': contentArray[i].title,
           'description': contentArray[i].subtitle,
           'url': contentArray[i].sources[0],
           'studio': contentArray[i].studio,
           'thumbnailImageUrl': ROOT + contentArray[i]['image-480x270'],
           'largeImageUrl': ROOT + contentArray[i]['image-780x1200']
-        });
-        mediaArray.push(mediaList[title]);
+        }));
       }
-      return mediaList;
     }
 
     makeCorsRequest();
